@@ -70,7 +70,7 @@ configure(docProjects()) {
 	apply plugin: "maven"
 	
 	group = 'org.mini2Dx'
-	version = '1.5.0-beta.1'
+	version = '1.5.0-SNAPSHOT'
 	
 	sourceCompatibility = 1.7
 	targetCompatibility = 1.7
