@@ -2,8 +2,10 @@
 - Updated to libGDX 1.9.6, roboVM 2.3.0 and artemis-odb 2.1.0
 - (#68) Added Checkbox, Slider and RadioButton UI elements
 - Added UiContainerOperation and ClearShaderProgramOperation for render pipelines
+- Added ScrollBox#setMinHeight to override the style's minimum height
 - ActionListeners now receive event details via ActionEvent instance
 - Fixed Button instances not triggering right-click events
+- Fixed ScrollBox#setMaxHeight triggering unnecessary layouts
 
 [1.4.9]
 - Fix @PostDeserialize not being invoked for nested objects
